--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/design-challenge-demo.loader.js";
       var config = {
-        dataUrl: buildUrl + "/design-challenge-demo.data.gz",
-        frameworkUrl: buildUrl + "/design-challenge-demo.framework.js.gz",
-        codeUrl: buildUrl + "/design-challenge-demo.wasm.gz",
+        dataUrl: buildUrl + "/design-challenge-demo.data",
+        frameworkUrl: buildUrl + "/design-challenge-demo.framework.js",
+        codeUrl: buildUrl + "/design-challenge-demo.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "design-challenge-3d",
